# solo-leveling-ai-python

./: .dockerignore  .env.production  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker-and-deploy.yml  test.yml
k8s/: deployment.yml  service.yml
src/: testing.py  vision_validation.py
src/agent/: critique.py  state.py  tools.py  workflow.py
src/app/: main.py
src/avro/enums/: assessment.py  localization_item.py  rarity.py  save_tasks_operation.py  task_rarity.py  task_topic.py
src/avro/events/: generate_tasks_event.py  save_tasks_event.py  task.py
src/config/: ai_config.py  config_loader.py  kafka_config.py  logging_config.py  logging_filters.py
src/di/: providers.py
src/exceptions/: exceptions.py
src/kafka/: consumer.py  context.py  interceptors.py  producer.py  tc.py  tp.py
src/models/: aprove_task_response.py  generate_task_response.py  task_validation_internal.py
src/prompt/: aprove_prompt.py  system_prompt.py  task_prompt.py  topic_prompts.py  topic_scenarios.py
src/resources/: application-prod.yml  application.yml
src/resources/avro_schemas/: Assessment.avsc  GenerateTasksEvent.avsc  LocalizationItem.avsc  Rarity.avsc  SaveTasksEvent.avsc  TaskRarity.avsc  TaskTopic.avsc
src/services/: avro_serialization.py  prompt_service.py  schema_registry.py  schema_registry_service.py  task_aprove_service.py  task_processor.py  task_service.py  task_validator.py
tests/: test_consumer.py  test_producer.py  test_task_service_batch.py
