[tool.poetry]
name = "task-generator"
version = "0.1.0"
description = "A service that generates tasks using LLM"
authors = [
    "babymerlen <mmromadin@gmail.com>"
]

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "~1.1.1"
pyyaml = "~6.0.2"
faststream = {extras = ["kafka"], version = "^0.6.2"}
aiokafka = "0.12.0"
dishka = "1.7.2"
pydantic = "^2.12.3"
dataclasses-avroschema = "^0.66.0"
uvicorn = "^0.38.0"
confluent-kafka = {extras = ["schema-registry"], version = "^2.12.2"}
cachetools = "^6.2.2"
types-cachetools = "^6.2.0.20251022"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
langgraph = "^1.0.4"

[tool.poetry.scripts]
run-service = "src.app.main:main"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*", "confluent_kafka.*"]
ignore_missing_imports = true
ignore_errors = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.1,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "types-pyyaml (>=6.0.0,<7.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-confluent-kafka (>=1.4.0,<2.0.0) ; python_version >= \"3.11\" and python_version < \"3.15\""
]